@@ -2,7 +2,7 @@ PREFIX ?= /usr
 SSN = openssn
 DATADIR = $(PREFIX)/share/openssn
 OPTDIR = /opt/openssn
-VERSION = 1.2
+VERSION = 1.3
 
 all:
 	$(MAKE) VERSION=$(VERSION) PREFIX=$(PREFIX) OPTDIR=$(OPTDIR) DATADIR=$(DATADIR) -C src
@@ -61,6 +61,9 @@ optdeinstall:
 	rm -rf $(PREFIX)/share/applications/openssn.desktop
 	rm -rf $(PREFIX)/share/pixmaps/openssn.png
 
-tarball: 
+tarball: clean
 	cd .. && tar czf openssn-$(VERSION).tar.gz openssn --exclude=.svn
+
+zipfile: clean
+	cd .. && zip -r openssn-$(VERSION).zip openssn --exclude \*.svn\*
 
